--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
-header {height: 100px;}
+header {height: 90px;}
 .contents {min-height:500px;}
-footer {height:100px;}
-
+footer {height:80px;}
+.bg-gray {background-color: #D8D8D8;}
 .sign-up-box {width:600px;}
 .sign-up-table th {background-color:#D8D8D8;}
